--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -72,6 +72,7 @@
 	</dependencies>
 
     <build>
+        <finalName>ROOT</finalName>
         <plugins>
         <plugin>
             <groupId>org.apache.tomcat.maven</groupId>
