--- a/frontweb/bower.json
+++ b/frontweb/bower.json
@@ -9,6 +9,7 @@
     "angular-route": "~1.5.6",
     "angular-material": "~1.0.9",
     "angular-material-data-table": "~0.10.9",
+    "angular-aria": "~1.5.6",
     "ng-stomp": "~0.2.0",
     "mdDataTable": "~1.4.3",
     "angular-data-table": "~0.5.0",
@@ -17,6 +18,7 @@
   "resolutions": {
     "angular": "~1.5.6",
     "angular-animate": "~1.5.6",
-    "angular-material": "~1.0.9"
+    "angular-material": "~1.0.9",
+    "angular-aria": "~1.5.6"
   }
 }
