--- a/frontweb/pom.xml
+++ b/frontweb/pom.xml
@@ -11,26 +11,29 @@
 
 	<build>
 		<plugins>
-
-		<plugin>
-			<groupId>org.codehaus.mojo</groupId>
-			<artifactId>exec-maven-plugin</artifactId>
-			<executions>
-				<execution>
-					<phase>generate-sources</phase>
-					<goals>
-						<goal>exec</goal>
-					</goals>
-				</execution>
-			</executions>
-			<configuration>
-				<executable>bower</executable>
-				<arguments>
-					<argument>install</argument>
-				</arguments>
-				<workingDirectory>${basedir}</workingDirectory>
-			</configuration>
-		</plugin>
+    		<plugin>
+    			<groupId>org.codehaus.mojo</groupId>
+    			<artifactId>exec-maven-plugin</artifactId>
+    			<executions>
+    				<execution>
+    					<phase>generate-sources</phase>
+    					<goals>
+    						<goal>exec</goal>
+    					</goals>
+    				</execution>
+    			</executions>
+    			<configuration>
+    				<executable>bower</executable>
+    				<arguments>
+    					<argument>install</argument>
+    				</arguments>
+    				<workingDirectory>${basedir}</workingDirectory>
+    			</configuration>
+    		</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+            </plugin>
 		</plugins>
 	</build>
 </project>
