--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 			</plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
-                <artifactId>jacoc-maven-plugin</artifactId>
+                <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.7.7.201606060606</version>
                 <executions>
                     <execution>
