--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 		</dependency>
 
 		<!-- Tests -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>1.3</version>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
